# commonmeta-py

./: .flake8  .gitignore  .gitmodules  .nojekyll  .pylintrc  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  Changelog.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  cli.html  commonmeta.json  index.html  mkdocs.yml  mypy.ini  nixpacks.toml  objects.json  posts.json  pyproject.toml  pytest.ini  requirements.txt  search.json  setup.py  sonar-project.properties  xsdata.xml
.github/: FUNDING.yml  issue_template.md
.github/workflows/: build.yml  codacy-coverage-reporter.yaml  pages.yml  publish.yml  python.yml  tests.yaml
_site/: CODE_OF_CONDUCT.html
_site/docs/: about.html  index.html
_site/reference/: index.html
commonmeta/: __init__.py  api_utils.py  author_utils.py  backend.py  base_utils.py  cli.py  constants.py  crossref_utils.py  date_utils.py  doi_utils.py  file_utils.py  io_utils.py  json.py  jsonschema_generator.py  metadata.py  schema_utils.py  translators.py  utils.py  v1_compat.py
commonmeta/metadata/: __init__.py  metadata.py
commonmeta/readers/: __init__.py  bibtex_reader.py  cff_reader.py  citeproc_reader.py  codemeta_reader.py  commonmeta_reader.py  crossref_reader.py  crossref_xml_reader.py  csl_reader.py  datacite_reader.py  datacite_xml_reader.py  inveniordm_reader.py  json_feed_reader.py  jsonfeed_reader.py  kbase_reader.py  openalex_reader.py  orcid_reader.py  orcid_xml_reader.py  ris_reader.py  ror_reader.py  schema_org_reader.py  vraix_reader.py
commonmeta/resources/: cff_v1.2.0.json  commonmeta_v0.10.1.json  commonmeta_v0.10.2.json  commonmeta_v0.10.4.json  commonmeta_v0.10.5.json  commonmeta_v0.10.6.json  commonmeta_v0.10.7.json  commonmeta_v0.10.8.json  commonmeta_v0.11.json  commonmeta_v0.12.json  commonmeta_v0.13.json  commonmeta_v0.14.json  commonmeta_v0.15.json  commonmeta_v0.16.json  commonmeta_v0.17.json  commonmeta_v0.18.json  commonmeta_v0.9.json  commonmeta_v1.0.json  commonmeta_v1.0rc1.json  crossref-v0.1.json  crossref-v0.2.json  crossref-v5.4.0.json  crossref-v5.5.0.json  datacite-v4.5.json  datacite-v4.json  datacite-v45.json  generate_clickhouse_ddl.py  generate_duckdb_ddl.py  inveniordm-v0.1.json  iso-8601.json  schema_org-v0.1.json  spdx-schema.json
commonmeta/writers/: __init__.py  bibtex_writer.py  citation_writer.py  citeproc_writer.py  commonmeta_writer.py  crosscite_writer.py  crossref_writer.py  crossref_xml_writer.py  csl_writer.py  datacite_writer.py  inveniordm_writer.py  orcid_writer.py  ris_writer.py  ror_writer.py  schema_org_writer.py
docs/: Makefile  _publish.yml  _quarto.yml  _sidebar.yml  cli.qmd  conf.py  contributing.rst  contributors.rst  examples.qmd  exceptions.rst  index.md  index.qmd  index.rst  install.md  installation.qmd  metadata.md  testing.md  theme.scss
docs/_site/: about.html  cli.html  examples.html  index.html  installation.html  metadata.html  search.json
docs/docs/: faq.rst  usecases.rst
docs/intro/: install.rst
docs/modules/: cn.rst  counts.rst  crossref.rst  filters.rst  intro.rst  workscontainer.rst
docs/notebooks/: bibtex.ipynb  citation.ipynb  citeproc_writer.ipynb  crossref.ipynb
docs/readers/: cff_reader.ipynb  crossref_reader.ipynb  crossref_xml_reader.ipynb  datacite_reader.ipynb  schema_org_reader.ipynb
docs/reference/: index.qmd
docs/writers/: bibtex_writer.ipynb  citation_writer.ipynb  citeproc_writer.ipynb  commonmeta_writer.ipynb  csl_writer.ipynb  ris_writer.ipynb
readers/: cff_reader.html  crossref_reader.html  crossref_xml_reader.html  datacite_reader.html  schema_org_reader.html
schemas/: cff_v1.2.0.json  commonmeta.json  commonmeta_v0.10.1.json  commonmeta_v0.10.json  commonmeta_v0.9.1.json  commonmeta_v1.0.json  ietf-bcp-47.json  journal_article.commonmeta.json
site_libs/bootstrap/: bootstrap-7b75f1a0d6e57ef23e21270d816f3465.min.css  bootstrap-dark-a1b59aef6d10b01033402d199b6c29b3.min.css
src/commonmeta_py/: __init__.py
talbot/: __init__.py  author_utils.py  base_utils.py  cnrequest.py  constants.py  date_utils.py  doi_utils.py  request.py  request_class.py  response.py  talbot_utils.py  utils.py
talbot/cn/: cn.py  styles.py
talbot/counts/: __init__.py  counts.py
talbot/crossref/: crossref.py  workscontainer.py
talbot/metadata/: metadata.py
talbot/readers/: __init__.py  cff_reader.py  citeproc_reader.py  codemeta_reader.py  crossref_json_reader.py  crossref_reader.py  crossref_xml_reader.py  datacite_json_reader.py  datacite_reader.py  ris_reader.py  schema_org_reader.py
talbot/writers/: __init__.py  bibtex_writer.py  citation_writer.py  citeproc_writer.py  crosscite_writer.py  datacite_writer.py  ris_writer.py  schema_org_writer.py
test/: test-pagination_params.py  test-types.py
tests/: commonmeta.json  conformance_common.py  conftest.py  test-api_utils.py  test-author_utils.py  test-backend.py  test-backend_cli.py  test-base_utils.py  test-bibtex-writer.py  test-bibtex_reader.py  test-bibtex_writer.py  test-cff_reader.py  test-citation-writer.py  test-citation_writer.py  test-citeproc-writer.py  test-citeproc_reader.py  test-citeproc_writer.py  test-cli.py  test-codemeta_reader.py  test-commonmeta_reader.py  test-commonmeta_writer.py  test-conformance.py  test-content_negotation.py  test-crossref_json_reader.py  test-crossref_reader.py  test-crossref_writer.py  test-crossref_xml_reader.py  test-crossref_xml_writer.py  test-csl_reader.py  test-csl_writer.py  test-cursor.py  test-datacite_json_reader.py  test-datacite_reader.py  test-datacite_writer.py  test-datacite_xml_reader.py  test-date_utils.py  test-doi_utils.py  test-file_utils.py  test-filters.py  test-funders.py  (+34 more)
tests/fixtures/: 10.25982_86723.65_1778009_kbcms.json  CITATION.cff  JDP_5fa4fb4647675a20c852c60b_kbcms.json  arxiv.html  citeproc-no-author.json  citeproc-no-categories.json  citeproc.json  citeproc_missing_doi.json  commonmeta-list.json  commonmeta.json  crosscite.json  crossref-list.json  crossref-list_missing_doi.json  crossref.json  pan.html  (+18 more)
writers/: bibtex_writer.html  citation_writer.html  commonmeta_writer.html  csl_writer.html  ris_writer.html
(+557 files in other folders)
