[project]
name = "commonmeta-py"
version = "0.86"
description = "Library for conversions to/from the Commonmeta scholarly metadata format"
authors = [{ name = "Martin Fenner", email = "martin@front-matter.io" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "MIT"
keywords = [
    "science",
    "metadata",
    "commonmeta",
    "bibtex",
    "csl",
    "crossref",
    "datacite",
]
dependencies = [
    "httpx>=0.28,<0.29",
    "dateparser>=1.1.7,<2",
    "types-dateparser~=1.1",
    "PyYAML~=6.0",
    "types-PyYAML~=6.0",
    "pydash>=7,<9",
    "beautifulsoup4~=4.11",
    "types-beautifulsoup4~=4.11",
    "simplejson~=3.18",
    "bibtexparser~=1.4",
    "citeproc-py-styles~=0.1.3",
    "citeproc-py>=0.7,<0.9",
    "jsonschema~=4.21",
    "base32_lib~=1.0",
    "datacite~=1.1",
    "xmltodict>=0.12,<0.15",
    "types-xmltodict>=0.13,<0.15",
    "nameparser>=1.1.2,<2",
    "pycountry>=23.12.11,<25",
    "click>=8.1.7,<9",
    "furl>=2.1.3,<3",
    "lxml>=4.8",
    "python-dateutil>=2.8.2,<3",
    "nh3>=0.2.14,<0.3",
    "pyjwt>=2.8.0,<3",
    "orjson>=3.9.14,<4",
    "orjsonl>=1.0.0,<2",
    "pikepdf>=8.14,<10.0",
    "edtf>=5.0.0,<6",
]

[project.urls]
Homepage = "https://python.commonmeta.org"
Repository = "https://github.com/front-matter/commonmeta-py"
Documentation = "https://python.commonmeta.org"

[project.scripts]
commonmeta = "commonmeta.cli:cli"

[dependency-groups]
docs = [
    "quartodoc>=0.7.1,<0.8",
    "jupyterlab>=4.0.9,<5",
    "jupyterlab-quarto>=0.2.8,<0.3",
]
dev = [
    "coverage",
    "ruff>=0.9.3,<1",
    "pytest~=8.3",
    "pytest-cov>=4.1.0,<5",
    "pytest-recording>=0.13.1,<0.14",
    "vcrpy>=6.02",
]

[tool.uv]
default-groups = [
    "docs",
    "dev",
]

[tool.hatch.build.targets.sdist]
include = ["commonmeta"]

[tool.hatch.build.targets.wheel]
include = ["commonmeta"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = [
    "F401",
    "F403",
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list =
        py39
        py310
        py311

    [testenv]
    deps = 
        pytest
        pytest-cov
    commands = pytest --cov=commonmeta --cov-report=xml

    [coverage:run]
    relative_files = True
    branch = True
"""
