[project]
name = "commonmeta-py"
dynamic = ["version"]
description = "Library for conversions to/from the Commonmeta scholarly metadata format"
authors = [{ name = "Martin Fenner", email = "martin@front-matter.de" }]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "science",
    "metadata",
    "commonmeta",
    "bibtex",
    "csl",
    "crossref",
    "datacite",
    "openalex",
    "schemaorg",
    "inveniordm",
]
dependencies = [
    "commonmeta-schema==1.0rc14",
    "dateparser>=1.1.7,<2",
    "PyYAML>=5.4",
    "beautifulsoup4>=4.11,<5",
    "bibtexparser~=1.4",
    "citeproc-py-styles>=0.1.2,<1",
    "citeproc-py>=0.9,<1",
    "jsonschema~=4.21",
    "base32_lib~=1.0",
    "datacite>=1.1.1,<2",
    "xmltodict>=0.12,<0.20",
    "nameparser>=1.1.1,<2",
    "pycountry>=22.3.5",
    "click>=8.1.7,<9",
    "furl>=2.1.3,<3",
    "lxml>=4.8",
    "python-dateutil>=2.8.2,<3",
    "nh3>=0.2.14,<0.3",
    "pyjwt>=2.8.0,<3",
    "edtf>=5.0.0,<6",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "psycopg[binary]>=3.2,<4",
    "marshmallow-utils>=0.10.0",
    "xmlschema>=2.5.1",
    "isbnlib>=3.10.14",
    "pillow>=11.0.0",
    "zstandard>=0.22.0,<1",
    "typing-extensions>=4.7.1,<5",
    "jsonschema-rs>=0.47 ; python_full_version >= '3.10'",
]

[project.optional-dependencies]
# The Rust backend (bulk import, local SQLite store, Parquet/archive output) that
# commonmeta/backend.py loads on demand. commonmeta-rs ships abi3-py314 wheels for
# macOS arm64 and Linux x86_64 plus an sdist. The python_full_version marker keeps
# it out of the universal lock below 3.14: commonmeta-py itself supports 3.9+, so
# an unmarked pin makes the whole resolution unsatisfiable on 3.9-3.13. Below 3.14
# the extra resolves to nothing and backend.py's require_backend() raises the clear
# "needs Python 3.14+" error at call time instead.
backend = ["commonmeta-rs>=0.9.41 ; python_full_version >= '3.14'"]

ujson = [
  "ujson>=5.13.0",
]
orjson = [
  "orjson>=3.9.14,<4",
  "orjsonl>=1.0.0,<2",
]
msgspec = [
  "msgspec>=0.21.0",
]

[project.urls]
Homepage = "https://python.commonmeta.org"
Repository = "https://github.com/front-matter/commonmeta-py"
Documentation = "https://python.commonmeta.org"

[project.scripts]
# Delegates to the commonmeta-rs CLI when the backend extra is installed (full
# command/option parity, e.g. --version, array convert output); falls back to
# the pure-Python Click CLI otherwise. See commonmeta.cli:main.
commonmeta = "commonmeta.cli:main"

[dependency-groups]
docs = [
    "quartodoc>=0.11.1,<0.12",
    "jupyterlab>=4.0.9,<5",
    "jupyterlab-quarto>=0.2.8,<0.3",
]
dev = [
    "black>=24",
    "coverage",
    "ruff>=0.9.3,<1",
    "pytest~=8.3",
    "pytest-cov>=4.1.0,<5",
    "pytest-recording>=0.13.1,<0.14",
    "pytest-black",
    "types-beautifulsoup4>=4.11,<5",
    "types-dateparser~=1.1",
    "types-PyYAML>=5.4",
    "types-xmltodict>=0.13,<0.20",
    "vcrpy>=6.0.2",
]

[tool.uv]
default-groups = ["docs", "dev"]
# commonmeta-schema is currently a prerelease (1.0rc14); it ships the final
# commonmeta_v1.0.json, which is the schema this package targets. "explicit" allows
# prereleases only for packages pinned to one (commonmeta-schema==1.0rc14); "allow"
# is global and let the resolver pick prereleases for every dependency - it was
# installing lxml 7.0.0a3 in place of the 6.1.1 release.
prerelease = "explicit"

[tool.hatch.build.targets.sdist]
include = ["commonmeta"]

[tool.hatch.build.targets.wheel]
include = ["commonmeta"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_files = "test-*.py"
testpaths = ["tests"]
filterwarnings = ["ignore::pyparsing.core.PyparsingDeprecationWarning"]

[tool.mypy]
exclude = ["build"]

[tool.ruff]
fix = true
exclude = [".git", ".ruff_cache", "__pypackages__", "_build", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
unfixable = []
ignore = ["E501"]

[tool.hatch.version]
path = "commonmeta/__init__.py"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    # Matches requires-python (>=3.9). CI exercises the floor (3.9) and the
    # ceiling (3.14); the versions between are covered by a local `tox` run.
    env_list =
        py39
        py310
        py311
        py312
        py313
        py314

    [testenv]
    deps =
        pytest
        pytest-cov
    commands = pytest --cov=commonmeta --cov-report=xml

    [coverage:run]
    relative_files = True
    branch = True
"""
